ros2/log/build_2020-11-18_19-23-24/jarvis_core/stderr.log
  File "/home/jarvis/workspace/ros2/install/jarvis_core/lib/python3.8/site-packages/jarvis_core/core.py", line 3
    import lib import common
               ^
SyntaxError: invalid syntax

